--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,93 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
+/* Custom */
+
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+    display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor:pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
 /* Reset */
 
 	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
@@ -2337,12 +2424,12 @@
 		background-color: #fff;
 		background-image: url("images/bg02.png"), url("images/bg02.png"), url("images/bg01.png");
 		background-position: top left,					top left,					top left;
-		background-size: 100% 6em,					100% 6em,					auto;
+		background-size: 100% 6em,						100% 6em,					auto;
 		background-repeat: no-repeat,					no-repeat,					repeat;
 	}
 
 		#header h1 {
-			padding: 0 0 2.75em 0;
+			padding: 0 0 1em 0;
 			margin: 0;
 		}
 
@@ -2414,7 +2501,7 @@
 						bottom: -0.5em;
 						left: 50%;
 						margin-left: -0.375em;
-						background-color: #37c0fb;
+						background-color: #f49542;
 						background-image: url("images/bg01.png");
 					}
 
@@ -2475,15 +2562,16 @@
 /* Banner */
 
 	#banner {
-		background-image: url("../../images/banner.jpg");
-		background-position: center center;
-		background-size: cover;
-		height: 28em;
+		height: auto;
 		text-align: center;
 		position: relative;
+		bottom: .5em;
+		left: 0;
+		width: 100%;
 	}
 
 		#banner header {
+			height: auto;
 			position: absolute;
 			bottom: 0;
 			left: 0;
@@ -2512,11 +2600,6 @@
 					#banner header h2 a:hover {
 						border-bottom-color: transparent;
 					}
-
-			#banner header .button {
-				vertical-align: middle;
-				margin-left: 1em;
-			}
 
 /* Wrapper */
 
@@ -2670,7 +2753,7 @@
 		/* Banner */
 
 			#banner {
-				height: 20em;
+				height: 24em;
 			}
 
 		/* Wrapper */
@@ -2782,7 +2865,7 @@
 		/* Banner */
 
 			#banner {
-				height: 20em;
+				height: 24em;
 			}
 
 				#banner header h2 {
@@ -3057,7 +3140,7 @@
 		/* Banner */
 
 			#banner {
-				height: 18em;
+				height: 24em;
 			}
 
 		/* Wrapper */
@@ -3123,7 +3206,7 @@
 		/* Banner */
 
 			#banner {
-				height: 20em;
+				height: 24em;
 			}
 
 				#banner header {
