--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,11 +9,12 @@
 
 /* Custom */
 
+
 * {box-sizing:border-box}
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
+  max-width: 800px;
   position: relative;
   margin: auto;
 }
@@ -36,6 +37,8 @@
   font-size: 18px;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
+  outline: 0;
+  border: 0; 
 }
 
 /* Position the "next button" to the right */
@@ -66,14 +69,14 @@
   height: 15px;
   width: 15px;
   margin: 0 2px;
-  background-color: #bbb;
+  background-color: #717171;
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
 }
 
 .active, .dot:hover {
-  background-color: #717171;
+  background-color: #f49542;
 }
 
 /* Fading animation */
@@ -104,6 +107,10 @@
 		font: inherit;
 		vertical-align: baseline;
 	}
+	
+	body {
+		background-color: #000000;
+}
 
 	article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 		display: block;
