--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,14 +14,34 @@
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 800px;
-  position: relative;
-  margin: auto;
+  position: absolute;
+  top: 0px;
+  z-index: 0;
+  width: 100%;
+  height: auto;
+  max-height: 100%;
+  overflow: hidden;
 }
+
+	.slideshow-container > .mySlides > img {
+	  height: auto;
+	  width: 100%;
+	  display: block;
+	}
 
 /* Hide the images by default */
 .mySlides {
     display: none;
+	width: 100%;
+	height: auto;
+}
+
+.dotContainer {
+	width: 100%;
+	position: absolute;
+	display: block;
+	z-index: 1;
+	bottom: 0px;
 }
 
 /* Next & previous buttons */
@@ -43,40 +63,32 @@
 
 /* Position the "next button" to the right */
 .next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
+	right: 0;
+	border-radius: 3px 0 0 3px;
 }
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
+	background-color: rgba(0,0,0,0.8);
 }
 
 /* The dots/bullets/indicators */
 .dot {
-  cursor:pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #717171;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
+	position: relative;
+	cursor:pointer;
+	height: 15px;
+	width: 15px;
+	margin: 2px;
+	background-color: #717171;
+	border-radius: 50%;
+	display: inline-block;
+	transition: background-color 0.6s ease;
+	z-index: 1;
+	bottom: 0em
 }
 
 .active, .dot:hover {
-  background-color: #f49542;
+	background-color: #f49542;
 }
 
 /* Fading animation */
@@ -95,6 +107,10 @@
 @keyframes fade {
   from {opacity: .4} 
   to {opacity: 1}
+}
+
+#logo:hover {
+	color: #f49542; 
 }
 
 /* Reset */
@@ -1919,7 +1935,7 @@
 	}
 
 		a:hover {
-			color: #37c0fb;
+			color: #f49542;
 			border-bottom-color: transparent;
 		}
 
@@ -2427,9 +2443,7 @@
 
 	#header {
 		text-align: center;
-		padding: 3em 0 0 0;
 		background-color: #fff;
-		background-image: url("images/bg02.png"), url("images/bg02.png"), url("images/bg01.png");
 		background-position: top left,					top left,					top left;
 		background-size: 100% 6em,						100% 6em,					auto;
 		background-repeat: no-repeat,					no-repeat,					repeat;
@@ -2448,22 +2462,30 @@
 
 	#nav {
 		cursor: default;
-		background-color: #333;
-		background-image: -moz-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.3)), url("images/bg01.png");
-		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.3)), url("images/bg01.png");
-		background-image: -ms-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.3)), url("images/bg01.png");
-		background-image: linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.3)), url("images/bg01.png");
+		background: -moz-linear-gradient(bottom, rgba(0,0,0,0), #111);
+		background: -webkit-linear-gradient(bottom, rgba(0,0,0,0), #111);
+		background: -ms-linear-gradient(bottom, rgba(0,0,0,0), #111);
+		background: linear-gradient(bottom, rgba(0,0,0,0), #111);
 		padding: 0;
+		position: relative;
+		z-index: 1;
+		height: 10em;
 	}
-
-		#nav:after {
-			content: '';
+		
+		#nav > h1 {
+			float: left;
+			position: relative;
+			color: #c0c0c0;
+			text-decoration: none;
+			border: 0;
 			display: block;
-			width: 100%;
-			height: 0.75em;
-			background-color: #f49542;
-			background-image: url("images/bg01.png");
+			padding: 0.7em 0.5em 0.7em 0.5em;
 		}
+		
+			#nav > h1 > a {
+				font-weight: 600;
+				color: #fff;
+			}
 
 		#nav > ul {
 			margin: 0;
@@ -2480,7 +2502,7 @@
 					text-decoration: none;
 					border: 0;
 					display: block;
-					padding: 1.5em 0.5em 1.35em 0.5em;
+					padding: 0.7em 0.5em 0.7em 0.5em;
 				}
 
 				#nav > ul > li:first-child {
@@ -2505,7 +2527,7 @@
 						content: '';
 						display: block;
 						position: absolute;
-						bottom: -0.5em;
+						top: -0.5em;
 						left: 50%;
 						margin-left: -0.375em;
 						background-color: #f49542;
@@ -2528,59 +2550,21 @@
 					display: none;
 				}
 
-/* Dropotron */
-
-	.dropotron {
-		background-color: #333;
-		background-image: -moz-linear-gradient(top, rgba(0,0,0,0.3), rgba(0,0,0,0)), url("images/bg01.png");
-		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.3), rgba(0,0,0,0)), url("images/bg01.png");
-		background-image: -ms-linear-gradient(top, rgba(0,0,0,0.3), rgba(0,0,0,0)), url("images/bg01.png");
-		background-image: linear-gradient(top, rgba(0,0,0,0.3), rgba(0,0,0,0)), url("images/bg01.png");
-		border-radius: 5px;
-		color: #fff;
-		min-width: 10em;
-		padding: 1em 0;
-		text-align: center;
-		box-shadow: 0 1em 1em 0 rgba(0, 0, 0, 0.5);
-	}
-
-		.dropotron > li {
-			line-height: 2em;
-			padding: 0 1.1em 0 1em;
-		}
-
-			.dropotron > li > a {
-				color: #c0c0c0;
-				text-decoration: none;
-				border: 0;
-			}
-
-			.dropotron > li.active > a, .dropotron > li:hover > a {
-				color: #fff;
-			}
-
-		.dropotron.level-0 {
-			border-radius: 0 0 5px 5px;
-			font-size: 0.9em;
-			padding-top: 0;
-			margin-top: -1px;
-		}
-
 /* Banner */
 
 	#banner {
-		height: auto;
+		height: 1.25em;
 		text-align: center;
 		position: absolute;
-		bottom: .5em;
+		bottom: 0em;
 		left: 0;
 		width: 100%;
+		height: auto;
 	}
 
 		#banner header {
-			height: auto;
-			position: absolute;
-			bottom: 0;
+			position: relative;
+			top: 0em;
 			left: 0;
 			width: 100%;
 			background: #212121;
@@ -2716,7 +2700,7 @@
 		/* Banner */
 
 			#banner {
-				height: 24em;
+				height: 5em;
 			}
 
 	}
@@ -2747,20 +2731,10 @@
 				font-size: 1.5em;
 			}
 
-		/* Header */
-
-			#header {
-				padding: 2em 0 0 0;
-			}
-
-				#header h1 {
-					padding: 0 0 1.75em 0;
-				}
-
 		/* Banner */
 
 			#banner {
-				height: 24em;
+				height: 5em;
 			}
 
 		/* Wrapper */
@@ -2872,7 +2846,7 @@
 		/* Banner */
 
 			#banner {
-				height: 24em;
+				height: 5em;
 			}
 
 				#banner header h2 {
@@ -3147,7 +3121,7 @@
 		/* Banner */
 
 			#banner {
-				height: 24em;
+				height: 5em;
 			}
 
 		/* Wrapper */
@@ -3213,7 +3187,7 @@
 		/* Banner */
 
 			#banner {
-				height: 24em;
+				height: 5em;
 			}
 
 				#banner header {
