--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -47,6 +47,10 @@
 		font-weight: bold
 	}
 	
+	.description-title > div {
+		padding: 0;
+	}
+	
 	.description-phrase {
 		animation-delay: 2.1s;
 		padding: 10px 20px 10px;
