--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,14 +26,14 @@
 }
 
 	.slideshow-container > .mySlides > img {
-	  height: auto;
-	  width: 100%;
+	  min-height: 100%;
+	  min-width: 100%;
 	  display: block;
 	}
 	
 	.slideshow-container > .mySlides > .slide-description {
 		top: 30vh;
-		left: 20vh;
+		left: 10vw;
 		position: absolute;
 		float: left;
 	}
@@ -44,7 +44,7 @@
 		display: inline-block;
 		color: #fff;
 		font-size: 50pt;
-		font-weight: bold
+		font-weight: bold;
 	}
 	
 	.description-title > div {
@@ -57,7 +57,7 @@
 		display: inline-block;
 		color: #ccc;
 		font-size: 28pt;
-		font-weight: bold
+		font-weight: bold;
 	}
 
 	.description-phrase > div {
@@ -69,7 +69,7 @@
 	position: absolute;
     display: none;
 	width: 100%;
-	height: auto;
+	height: 100%;
 }
 
 .dotContainer {
@@ -120,7 +120,7 @@
 	display: inline-block;
 	transition: background-color 0.6s ease;
 	z-index: 1;
-	bottom: 0em
+	bottom: 0em;
 }
 
 .active, .dot:hover {
@@ -148,6 +148,64 @@
 #logo:hover {
 	color: #f49542; 
 }
+
+.about-me-landing {
+	position: relative;
+	animation-delay: 1s;
+	top: 5em;
+	display: block;
+	margin: auto;
+	height: 6em;
+}
+	.about-me-landing > div {
+		display: block;
+		height: auto;
+		width: 60%;
+		margin: auto;
+	}
+
+		.about-me-landing > div > div {
+			position: relative;
+			height: 100%;
+			float: left;
+			width: 33%;
+			padding-left: 1em;
+			padding-right: 1em;
+		}
+
+			.about-me-landing > div > div > span {
+				position: relative;
+				display: block;
+				margin: auto;
+				width: auto;
+				text-align: left;
+				font-size: 3.5rem;
+				line-height: 1;
+				color: #000;
+				font-weight: 700;
+				font-family: 'Lato', 'Helvetica Neue', sans-serif;
+			}
+			
+			.about-me-landing > div > div > img {
+				position: relative;
+				display: block;
+				height: auto;
+				margin: auto;
+			}
+			
+			.about-me-landing > div > div > p {
+				position: relative;
+				display: block;
+				margin: auto;
+				margin-top: 2em;
+				width: auto;
+				text-align: left;
+				font-size: 1rem;
+				line-height: 1.8;
+				color: #000;
+				font-weight: 400;
+				font-family: 'Lato', 'Helvetica Neue', sans-serif;
+			}
 
 /* Reset */
 
